# evals-cookbook

./: .gitignore  README.md
ec-backend/: .env.example  evals.db  main.py  pyproject.toml
ec-backend/app/core/: __init__.py  celery_app.py  config.py  database.py
ec-backend/app/modules/common/: __init__.py  llm_client.py  math_utils.py
ec-backend/app/modules/evals/: __init__.py  models.py  router.py  schemas.py  tasks.py
ec-backend/app/modules/playground/: __init__.py  router.py  schemas.py
ec-backend/src/playground/: models.py
ec-frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
ec-frontend/.agent/workflows/: deploy_to_vercel.md
ec-frontend/src/: App.tsx  index.css
ec-frontend/src/components/lab/: CreateEvalModal.tsx  EvalDetail.tsx  EvalTable.tsx
ec-frontend/src/components/metrics/: ConfidenceHeatmap.tsx  Sparkline.tsx  Speedometer.tsx
ec-frontend/src/components/playground/: AnalysisPanel.tsx  InputPanel.tsx  RunDetails.tsx
ec-frontend/src/components/x-ray/: TokenStream.tsx
ec-frontend/src/layouts/: GlobalLayout.tsx
ec-frontend/src/lib/: api.ts
ec-frontend/src/pages/: Lab.tsx  Playground.tsx  Settings.tsx
ec-frontend/src/store/: appStore.ts
